Update app.java